// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Javascript dependencies should find bolt projects 1`] = `
Object {
  "311128a3ab878d27e98b4f68914aa64e": Object {
    "id": "311128a3ab878d27e98b4f68914aa64e",
    "name": undefined,
    "nodeType": "Project",
    "packageJSON": "{}",
    "projectType": "node",
    "transient": Object {
      "packageJSON": Object {},
      "path": "/bar/zap",
    },
    "version": undefined,
  },
}
`;

exports[`Javascript dependencies should find bolt projects 2`] = `
Object {
  "311128a3ab878d27e98b4f68914aa64e": Object {
    "id": "311128a3ab878d27e98b4f68914aa64e",
    "name": undefined,
    "nodeType": "Project",
    "packageJSON": "{}",
    "projectType": "node",
    "transient": Object {
      "packageJSON": Object {},
      "path": "/bar/zap",
    },
    "version": undefined,
  },
}
`;

exports[`Javascript dependencies should find rush projects 1`] = `
Object {
  "311128a3ab878d27e98b4f68914aa64e": Object {
    "id": "311128a3ab878d27e98b4f68914aa64e",
    "name": undefined,
    "nodeType": "Project",
    "packageJSON": "{}",
    "projectType": "node",
    "transient": Object {
      "packageJSON": Object {},
      "path": "/bar",
    },
    "version": undefined,
  },
}
`;
